# axum-workshop

./: Cargo.toml  README.md  docker-compose.yml
step-00/: Cargo.toml
step-01/: Cargo.toml
step-01/src/: main.rs
step-02/: Cargo.toml
step-02/src/: greeting.rs  main.rs
step-03/: Cargo.toml
step-03/src/: main.rs  router.rs
step-04/: Cargo.toml
step-04/src/: main.rs  router.rs  state.rs
step-04/src/router/: todos.rs
step-05/: Cargo.toml
step-05/migrations/: 20230722022804_create_todos.sql
step-05/src/: main.rs  router.rs
step-06/: Cargo.toml
step-06/src/: db.rs  main.rs  state.rs
step-06/src/router/: todos.rs
step-07/: Cargo.toml
step-07/migrations/: 20230722200048_create_users.sql
step-07/src/: auth.rs  db.rs  error.rs  main.rs  router.rs  state.rs
step-07/src/db/: todo.rs  user.rs
step-07/src/router/: todos.rs
