[package]
name = "step-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.6.19"
axum-debug = "0.3.3"
axum-macros = "0.3.8"
hyper = "0.14.27"
serde = {version="1.0.174", features=["derive"]}
serde_json = "1.0.103"
tokio = {version="1.29.1", features=["full"]}
tower = "0.4.13"
